@@ -1,3 +1,12 @@
+2004-05-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b139
+
+	* Change:
+	  !!  2004-05-23:   adv_search.php has been broken
+	  !!  for an unknown amount of time.  Since it has
+	  !!  no references from outside files, it will 
+	  !!  automatically redirect to albums.php until
+	  !!  it can be fixed
+
 2004-05-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b138
 
 	* Change: Items which are children of hidden parents can not be located
